# rs-math3d

./: Cargo.toml  README.md  build.rs  rustfmt.toml
src/: basis.rs  cmath.rs  lib.rs  math.rs  matrix.rs  primitives.rs  quaternion.rs  queries.rs  scalar.rs  transforms.rs  vector.rs
