[package]
name = "rs-math3d"
version = "0.9.23"
license = "BSD-3-Clause"
authors = [
    "Raja Lehtihet <raja.lehtihet@gmail.com>",
    "Wael El Oraiby <wael.eloraiby@gmail.com>",
]
edition = "2018"
description = "Rust 3D Math (no dependency on std)"
repository = "https://github.com/NeoCogi/rs-math3d"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
